k8s/backend-ingress.yaml
## Ingress 원본 ( 류건열님 작업 )
## [mlops_user@ip-10-1-0-86 mlfoundry]$ kubectl get ingress mlfoundry-ingress -n mlops -o yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=4000
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/group.name":"shared-alb","alb.ingress.kubernetes.io/group.order":"1","alb.ingress.kubernetes.io/healthcheck-path":"/health","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\":80}]","alb.ingress.kubernetes.io/load-balancer-attributes":"idle_timeout.timeout_seconds=4000","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/i [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2026-05-22T01:11:35Z"
  finalizers:
  - group.ingress.k8s.aws/shared-alb
  generation: 2
  name: mlops-ingress
  namespace: mlops
  resourceVersion: "11503876"
  uid: 73799414-690a-43b0-8d19-fb62f066a894
spec:
  ingressClassName: alb
  rules:
  - host: mlops.click
    http:
      paths:
      - backend:
          service:
            name: mlops
            port:
              number: 6080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-sharedalb-0882a5287f-595901001.ap-northeast-2.elb.amazonaws.com
      ports:
      - port: 80
        protocol: ""
