k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops
  namespace: mlops
spec:
  selector:
    app: mlops
  ports:
    - protocol: TCP
      port: 6080
      targetPort: 6080
  type: ClusterIP
